[gd_scene load_steps=45 format=3 uid="uid://xclvskogofy7"]

[ext_resource type="Script" path="res://NPC/skeleton_mob.gd" id="1_13agd"]
[ext_resource type="Texture2D" uid="uid://dwvln5adetfxu" path="res://assets/64 X 64 Skeleton 2D assets/Sprites and files/Full Sprite sheet/Attack 1 sprite sheet.png" id="2_qq5pw"]
[ext_resource type="Texture2D" uid="uid://bxkueeistrc3x" path="res://assets/64 X 64 Skeleton 2D assets/Sprites and files/Full Sprite sheet/Death sprite sheet.png" id="3_yw62t"]
[ext_resource type="Texture2D" uid="uid://dcka04jl347yv" path="res://assets/64 X 64 Skeleton 2D assets/Sprites and files/Full Sprite sheet/IDLE sprite sheet.png" id="4_v7m7c"]
[ext_resource type="Texture2D" uid="uid://ij5aplcaply3" path="res://assets/64 X 64 Skeleton 2D assets/Sprites and files/Full Sprite sheet/Walk sprite sheet.png" id="5_im6d2"]
[ext_resource type="PackedScene" uid="uid://bjl45lcauw7wt" path="res://UI/Healthbar.tscn" id="6_bvdvi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vhxa5"]
atlas = ExtResource("2_qq5pw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq3bq"]
atlas = ExtResource("2_qq5pw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v48d"]
atlas = ExtResource("2_qq5pw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vexji"]
atlas = ExtResource("2_qq5pw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ico0"]
atlas = ExtResource("2_qq5pw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xlqk"]
atlas = ExtResource("2_qq5pw")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngp0g"]
atlas = ExtResource("2_qq5pw")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8322w"]
atlas = ExtResource("2_qq5pw")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqj61"]
atlas = ExtResource("3_yw62t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp3k0"]
atlas = ExtResource("3_yw62t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iocdc"]
atlas = ExtResource("3_yw62t")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo5et"]
atlas = ExtResource("3_yw62t")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uragq"]
atlas = ExtResource("3_yw62t")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttscm"]
atlas = ExtResource("3_yw62t")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rou17"]
atlas = ExtResource("3_yw62t")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_af6xu"]
atlas = ExtResource("3_yw62t")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikgua"]
atlas = ExtResource("3_yw62t")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b4w0"]
atlas = ExtResource("3_yw62t")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd7vv"]
atlas = ExtResource("3_yw62t")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_067ja"]
atlas = ExtResource("3_yw62t")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n28oc"]
atlas = ExtResource("3_yw62t")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqbnp"]
atlas = ExtResource("3_yw62t")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_228g8"]
atlas = ExtResource("4_v7m7c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2y8i"]
atlas = ExtResource("4_v7m7c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6whk"]
atlas = ExtResource("4_v7m7c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bd55"]
atlas = ExtResource("4_v7m7c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djbex"]
atlas = ExtResource("4_v7m7c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k5f2"]
atlas = ExtResource("4_v7m7c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24ap3"]
atlas = ExtResource("4_v7m7c")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyt3y"]
atlas = ExtResource("5_im6d2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6fg4"]
atlas = ExtResource("5_im6d2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5yxd"]
atlas = ExtResource("5_im6d2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqbkd"]
atlas = ExtResource("5_im6d2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2gcw"]
atlas = ExtResource("5_im6d2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ij8"]
atlas = ExtResource("5_im6d2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h0cgv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhxa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq3bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v48d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vexji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ico0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xlqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngp0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8322w")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqj61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp3k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iocdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo5et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uragq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttscm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rou17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af6xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikgua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b4w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd7vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_067ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n28oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqbnp")
}],
"loop": false,
"name": &"die",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_228g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2y8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6whk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bd55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djbex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k5f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24ap3")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyt3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6fg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5yxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqbkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2gcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ij8")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5fjj7"]
radius = 388.104

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xkuq1"]
radius = 28.0
height = 118.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_13agd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
scale = Vector2(1.69531, 1.8205)
sprite_frames = SubResource("SpriteFrames_h0cgv")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, -1)
shape = SubResource("CircleShape2D_5fjj7")

[node name="Healthbar" parent="." instance=ExtResource("6_bvdvi")]
offset_left = -56.0
offset_top = -92.0
offset_right = 74.0
offset_bottom = -83.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D2" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1, -8)
shape = SubResource("CapsuleShape2D_xkuq1")

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
